# small-model-finetuning

./: .env.example  .gitignore  CLAUDE.md  README.md  agent.py  main.py  phase2_plan.md  pyproject.toml  sample_menu.md  test.py
scripts/: free_vram.sh
src/: agent.py  backends.py  cache.py  mcp_client.py  model.py  prompts.py  run_agent.py  sample_menu.md  schema.py  tools.py
src/claude/: claude_agent.py  run_claude.py
src/gemma/: agent.py  run_agent.py
viz/: README.md  server.py
viz/static/: index.html
