[project]
name = "small-model-finetuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.109.2",
    "bitsandbytes>=0.49.2",
    "fastapi>=0.137.1",
    "firecrawl-py>=4.30.1",
    "markdownify>=1.2.2",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "torch>=2.11.0",
    "transformers>=5.10.2",
    "trl>=1.5.1",
    "uvicorn[standard]>=0.49.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
